Fix desktop layout bugs

--- a/src/app.scss
+++ b/src/app.scss
@@ -245,11 +245,6 @@ button {
     flex-direction: column;
     justify-content: space-between;
   }
-
-  .upgrades {
-    height: 30rem;
-    overflow-y: scroll;
-  }
 }
 
 @media only screen and (min-width: 1201px) {
