--- a/src/containers/Upgrades/Upgrades.module.scss
+++ b/src/containers/Upgrades/Upgrades.module.scss
@@ -1,8 +1,23 @@
-.upgrades {
+@use '../../app.scss';
+@use '../../app.scss' as App;
+
+.upgrades-container {
+  border: 1.5px app.$white solid;
+  margin: 0;
+  height: fit-content;
+}
+
+.upgrades-header {
+  @include App.header-bar;
+}
+
+.upgrades-list {
+  overflow-y: scroll;
+  padding: 0.7rem 0.7rem;
   display: flex;
   flex-direction: column;
-  margin: 1rem 0 0;
   row-gap: 1rem;
+  height: 23.5rem;
 }
 
 @media only screen and (min-width: 1024px) {
